can click article title or author jump to personal page correct position

--- a/web/css/article.css
+++ b/web/css/article.css
@@ -1,27 +1,32 @@
+
+
 dl.comment {
     padding: 1em .1em 0 1em;
     margin-bottom: 10px;
-    border: 1px dotted steelblue;
-    border-radius: 5px;
-    background-color: #F7F7F7;
+    border: 2px dashed seashell;
+    border-radius: 10px;
+    background-color: #F4F4F9;
 }
 
 dd.comment {
+    background-color: #F7F7F4;
+    border-radius: 5px;
     position: relative;
-    padding: 0 0 25px 10px;
-    margin: 0 0 5px -5px;
+    padding: 10px 0 10px 20px;
+    margin: 5px 5px 5px 0;
+    
 }
 
 @media (max-width: 991px){
     div.comment-action-btn{
-        position: absolute;
+        position: relative;
         left: 60%;
         width: 40%;
     }
 }
 @media (min-width: 992px){
     div.comment-action-btn{
-        position: absolute;
+        position: relative;
         left: 80%;
         width: 20%;
     }
@@ -58,7 +63,7 @@ a.disabled {
 }
 
 .popup {
-    margin: -20px 0 20px 0;
+    margin: -35px 0 20px 0;
     padding: 10px;
     background: none repeat scroll 0 0 #f5f5f5;
     border-radius: 5px;
@@ -70,8 +75,8 @@ a.disabled {
 
 .popup .close {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 20px;
+    right: 15px;
     transition: all 200ms;
     font-size: 30px;
     font-weight: bold;
